[update post] Layout
+ Fix syntax coloration
+ Fix Liquid parsing

--- a/_posts/2012-09-15-layout.md
+++ b/_posts/2012-09-15-layout.md
@@ -288,7 +288,7 @@ __Il s'avère qu'il est d'ailleurs préférable de changer le template d'un bloc
 
 On voit de temps en temps une petite ligne qui ressemble à ceci :
 
-{% highlight php %}
+{% highlight xml %}
 <remove name="left" />
 {% endhighlight %}
 
@@ -343,8 +343,10 @@ Avec lui, plus besoin de faire un module pour « nettoyer » votre thème :)
 
 Oui ! Magento effectue un `str_replace` sur tout votre XML comme ceci :
 
+{% raw %}
 *    `{{baseUrl}}` devient l'URL non sécurisée de votre store
 *    `{{baseSecureUrl}}` devient l'URL sécurisée de votre store
+{% endraw %}
 
 ## Les updates
 
