[update post] Layout
+ Assign vars {{baseSecureUrl}} and {{baseUrl}}

--- a/_posts/2012-09-15-layout.md
+++ b/_posts/2012-09-15-layout.md
@@ -332,10 +332,10 @@ Avec lui, plus besoin de faire un module pour « nettoyer » votre thème :)
 
 Oui ! Magento effectue un `str_replace` sur tout votre XML comme ceci :
 
-{% raw %}
-*    `{{baseUrl}}` devient l'URL non sécurisée de votre store
-*    `{{baseSecureUrl}}` devient l'URL sécurisée de votre store
-{% endraw %}
+{% assign baseUrl = "{{baseUrl}}" %}
+{% assign baseSecureUrl = "{{baseSecureUrl}}" %}
+*   `{{baseUrl}}` devient l'URL non sécurisée de votre store
+*   `{{baseSecureUrl}}` devient l'URL sécurisée de votre store
 
 ## Les updates
 
